--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Austyne Digitals - Content Strategy & Copywriting That Converts</title>
   <meta name="description"
-    content="Transform your audience to sales with content strategies & ad copy that converts. Stop guessing and start winning with Austyne Digitals."
-  >
+    content="Transform your audience to sales with content strategies & ad copy that converts. Stop guessing and start winning with Austyne Digitals.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
